<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_chain"
        android:checkable="true"
        android:title="@string/menu_chain"
        app:showAsAction="never" />
    <item android:id="@+id/action_library" android:title="@string/menu_library" app:showAsAction="never" />
    <item android:id="@+id/action_backup" android:title="@string/menu_backup" app:showAsAction="never" />
    <item android:id="@+id/action_import" android:title="@string/menu_import" app:showAsAction="never" />
    <item android:id="@+id/action_tracks" android:title="@string/menu_tracks" app:showAsAction="never" />
    <item android:id="@+id/action_box" android:title="@string/menu_box" app:showAsAction="never" />
    <item android:id="@+id/action_sidelined" android:title="@string/menu_sidelined" app:showAsAction="never" />
    <item android:id="@+id/action_drafts" android:title="@string/menu_drafts" app:showAsAction="never" />
    <item android:id="@+id/action_journal" android:title="@string/menu_journal" app:showAsAction="never" />
    <item android:id="@+id/action_condition" android:title="@string/menu_condition" app:showAsAction="never" />
    <item android:id="@+id/action_reset" android:title="@string/menu_reset" app:showAsAction="never" />
    <item android:id="@+id/action_account" android:title="@string/menu_account" app:showAsAction="never" />
    <item android:id="@+id/action_folder" android:title="@string/menu_folder" app:showAsAction="never" />
    <item android:id="@+id/action_help" android:title="@string/menu_help" app:showAsAction="never" />
</menu>
