<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="24dp"
    android:paddingTop="8dp"
    android:paddingEnd="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/dArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/draft_artist"
            android:inputType="textCapWords"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/dTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/draft_title"
            android:inputType="textCapWords"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/dLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/draft_label"
            android:inputType="textCapWords"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/dCatno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:hint="@string/draft_catno"
            android:inputType="textCapCharacters"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/dYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/draft_year"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/dFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/draft_format"
            android:inputType="text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/dNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/draft_notes"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>
